--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Darko Tasevski <darktasevski@gmail.com> (dtasevski.surge.sh/)",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "yargs": "^12.0.1"
   }
 }
